--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postgres": "^3.4.8",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "recharts": "^3.7.0",
     "tailwind-merge": "^3.4.0",
     "tsx": "^4.21.0"
   },
