--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.563.0",
     "next": "^16.1.6",
+    "next-swagger-doc": "^0.4.1",
     "pg": "^8.17.2",
     "postgres": "^3.4.8",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "recharts": "^3.7.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-react": "^5.32.0",
     "tailwind-merge": "^3.4.0",
     "tsx": "^4.21.0"
   },
@@ -38,6 +41,8 @@
     "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-react": "^5.18.0",
     "dotenv": "^17.2.3",
     "drizzle-kit": "^0.18.1",
     "eslint": "^9",
